--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <p> [11,4,41,50,7,19,8,18,2,6,43,6,20,43,2,23,12,24,31,2] </p>
   
   <button onclick="createList()" type="button" id="startButton">Click Here for Measures of Central Tendency </button>
+    
+  <ol>
+    <li id="mean"><li>
+    <li id="mode"><li>
+    <li id="average"><li>
+  </ol>
 
   </body>
 </html>
