--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <body>
   <h1> Number Cruncher </h1>
+    <script src="values.js"> </script>
   
   <p> List of Numbers: </p>
   <p> [11,4,41,50,7,19,8,18,2,6,43,6,20,43,2,23,12,24,31,2] </p>
