--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
   <p> List of Numbers: </p>
   <p> [11,4,41,50,7,19,8,18,2,6,43,6,20,43,2,23,12,24,31,2] </p>
   
-  <button onclick="createList()" type="button" id="startButton">Click Here for Measures of Central Tendency </button>
-    
   <ol>
-    <li id="mean"><li>
-    <li id="mode"><li>
-    <li id="average"><li>
+    <li> Mean: 19.95<li>
+    <li> Mode: 6,43 <li>
+    <li> Median: 18.5 <li>
   </ol>
-
   </body>
 </html>
