--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <p> [11,4,41,50,7,19,8,18,2,6,43,6,20,43,2,23,12,24,31,2] </p>
   
   <ol>
-    <li> Mean: 19.95<li>
-    <li> Mode: 6,43 <li>
-    <li> Median: 18.5 <li>
+    <li> Mean: 19.95</li>
+    <li> Mode: 6,43 </li>
+    <li> Median: 18.5 </li>
   </ol>
   </body>
 </html>
