--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       font-family: Verdana;
       line-height: 2;
       color: WHITE;
-      background-color: #DEB887; }
+      background-color: MediumSeaGreen; }
     h1 {
       color: white;
       font-weight: bold;
@@ -25,11 +25,6 @@
     <li id="mode"></li>
     <li id="median"></li>
   </ol>
-  
-  <ol>
-    <li> Mean: 19.95</li>
-    <li> Mode: 6,43 </li>
-    <li> Median: 18.5 </li>
-  </ol>
+ 
   </body>
 </html>
