--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <p> List of Numbers: </p>
   <p> [11,4,41,50,7,19,8,18,2,6,43,6,20,43,2,23,12,24,31,2] </p>
   
-  <button onclick="createList()" type="button" id="startButton">Click Here to Calculate Measures of Central Tendency</button>
+  <button onclick="createList()" type="button" id="startButton">Click Here to Calculate the Measures of Central Tendency</button>
   
   <ol>  
     <li id="mean"></li>
